src/test/ui/lexer/lex-bad-unicode-char.rs
fn main() {
    println!("hello {}"̣, 1);
    //~^ ERROR: unknown start of token: \u{323}
}
